ci(GitHub): run the `release` step only on the `main` branch

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,6 +29,8 @@ jobs:
         run: npm publish --dry-run
 
   release:
+    if: ${{ github.ref == 'refs/heads/main' }}
+
     needs: [test]
 
     runs-on: ubuntu-latest
