--- a/package.json
+++ b/package.json
@@ -36,15 +36,14 @@
     "@eslint/js": "^9.30.0"
   },
   "peerDependencies": {
-    "@types/eslint__js": "^8.42.3",
-    "eslint": "^9.16.0"
+    "@eslint/js": "^9.30.0"
   },
   "devDependencies": {
     "@binden/commitlint-config": "^2.1.0",
-    "@binden/semantic-release-config": "^3.0.0",
+    "@binden/semantic-release-config": "^3.0.2",
     "husky": "^9.1.7",
-    "lint-staged": "^15.5.1",
-    "prettier": "^3.5.3"
+    "lint-staged": "^16.1.2",
+    "prettier": "^3.6.2"
   },
   "funding": {
     "type": "Coinbase Commerce",
